# r2v

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: cpu.rs  main.rs
src/instruction/: format.rs  instructions.rs  mod.rs
