[package]
name = "r2v"
version = "0.1.0"
authors = ["bokuweb <bokuweb12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.2"
byteorder = "1.3"
bitfield = "0.13.2"

[dev-dependencies]
pretty_assertions = "0.6.1"
insta = "0.13"